--- a/src/Config/config.env
+++ b/src/Config/config.env
@@ -1,4 +1,5 @@
 PORT = 3080
-MONGO_URI = mongodb://localhost:27017/
+MONGO_URI = mongodb://localhost:27017/crud-test
 EMAIL_USERNAME = ghasemi.parsaa@gmail.com
 EMAIL_PASSWORD = sxeczfamdzxwcuoh
+JWT_SECRET = hyungj1982763
